<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:backgroundTint="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Input Shipment"
                    android:fontFamily="@font/bahnschrift"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="55dp"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/belowView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/wave"
            android:layout_below="@id/topView"
            android:layout_marginTop="-20dp"/>

        <ImageView
            android:id="@+id/ivPackage"
            android:layout_width="166dp"
            android:layout_height="99dp"
            android:layout_alignBottom="@+id/topView"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="-4dp"
            app:srcCompat="@drawable/ic_shipping" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignBottom="@+id/topView"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:layout_marginLeft="150dp"
            android:text="veti-deliver"
            android:textSize="40sp"
            android:fontFamily="@font/sweet_purple"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="ID Shipment"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputIdShipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Sender Name"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSenderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Date of Shipment"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Types of Shipment"
                android:layout_margin="8dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp">

                <RadioGroup
                    android:id="@+id/typesShipment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/electronicRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/electronic" />
                    <RadioButton
                        android:id="@+id/apparelRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/apparel" />
                    <RadioButton
                        android:id="@+id/automotiveRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/automotive" />
                    <RadioButton
                        android:id="@+id/etcRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/etc" />
                </RadioGroup>
            </GridLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Weight of Goods"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Courier Services"
                android:layout_margin="8dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp">

                <RadioGroup
                    android:id="@+id/typesCourier"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/jneRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/jne" />
                    <RadioButton
                        android:id="@+id/posRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/pos" />
                    <RadioButton
                        android:id="@+id/tikiRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/tiki" />
                </RadioGroup>
            </GridLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Origin"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputOrigin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Sender Address"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSenderAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Destination"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Receiver Address"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputReceiverAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/button_background"
                android:text="Submit Shipment"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>